[package]
name = "scanner-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
dhat = "0.3.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.75"

[dev-dependencies]
actix-rt = "2.9.0"
reqwest = "0.11.22"

[profile.dhat]
inherits = "release"
debug = 1

[profile.flamegraph]
inherits = "release"
debug = true
